--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Eventos Javascript</title>
     <script>
             function alerta(){
-                alert("bem-vindo ao meu site!");
+                alert("são paulo!");
             }
     </script>
 </head>
